--- a/SkinCancerDetection.ipynb
+++ b/SkinCancerDetection.ipynb
@@ -424,7 +424,7 @@
         "arr = img_to_array(img)\n",
         "arr = np.expand_dims(arr, axis=0)\n",
         "arr /= 255\n",
-        "prediction =new_model.predict_classes(arr)\n",
+        "prediction = (model2.predict(arr) > 0.5).astype("int32")\n",
         "pred = prediction[0]\n",
         "print(('This skin mole is malignant' if pred >0 else 'This skin mole is benign'))"
       ],
