--- a/SkinCancerDetection.ipynb
+++ b/SkinCancerDetection.ipynb
@@ -28,9 +28,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cDLXrqcNGlU7",
-        "colab_type": "code",
-        "colab": {}
+        "id": "cDLXrqcNGlU7"
       },
       "source": [
         "from google.colab import files\n",
@@ -56,12 +54,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "D2AOUuYseiBo",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 156
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fb1efa4b-8510-428c-b4ad-cb2afcf13d14"
+        "outputId": "cba6ed00-be34-4f73-9ab7-5748fa01d70a"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -76,13 +72,36 @@
         "from tensorflow.keras.preprocessing.image import load_img\n",
         "from tensorflow.keras.preprocessing.image import img_to_array\n",
         "import PIL\n",
-        "print(tf.__version__)\n",
+        "print(tf.__version__)\n"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2.5.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2uV4xtY1RKEo",
+        "outputId": "27b339d2-87dc-4940-8481-404734ee2cd1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
         "import os\n",
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
         "epochs = 200\n",
         "batch_size = 128\n",
         "IMG_HEIGHT=112 \n",
         "IMG_WIDTH=122\n",
+        "\n",
         "train_dir = os.path.join('train')\n",
         "validation_dir = os.path.join('test')\n",
         "train_ben_dir = os.path.join(train_dir, 'benign')  # directory with our training benign pictures\n",
@@ -107,12 +126,11 @@
         "print(\"Total training images:\", total_train)\n",
         "print(\"Total validation images:\", total_val)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2.2.0\n",
             "total training benign images: 1440\n",
             "total training malignant images: 1197\n",
             "total validation benign images: 360\n",
@@ -129,7 +147,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "cuInFfJLivLf",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 267
@@ -201,9 +218,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RX4eoY50Yxf5",
-        "colab_type": "code",
-        "colab": {}
+        "id": "RX4eoY50Yxf5"
       },
       "source": [
         "model = Sequential([\n",
@@ -245,7 +260,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "4densNoD-Cxb",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
@@ -285,7 +299,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "1yPsyinvvTNU",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 499
@@ -293,28 +306,24 @@
         "outputId": "316f5bdc-fda8-4814-f11e-733272a2fbfc"
       },
       "source": [
-        "#visualize the model:\n",
+        "import matplotlib.pyplot as plt\n",
         "acc = history.history['accuracy']\n",
         "val_acc = history.history['val_accuracy']\n",
         "\n",
         "loss = history.history['loss']\n",
         "val_loss = history.history['val_loss']\n",
-        "epochs = epochs\n",
+        "\n",
         "epochs_range = range(epochs)\n",
-        "\n",
-        "plt.figure(figsize=(8, 8))\n",
-        "plt.subplot(1, 2, 1)\n",
-        "plt.plot(epochs_range, acc, label='Training Accuracy')\n",
-        "plt.plot(epochs_range, val_acc, label='Validation Accuracy')\n",
-        "plt.legend(loc='lower right')\n",
-        "plt.title('Training and Validation Accuracy')\n",
-        "\n",
-        "plt.subplot(1, 2, 2)\n",
-        "plt.plot(epochs_range, loss, label='Training Loss')\n",
-        "plt.plot(epochs_range, val_loss, label='Validation Loss')\n",
-        "plt.legend(loc='upper right')\n",
-        "plt.title('Training and Validation Loss')\n",
-        "plt.show()"
+        "def plot(x, y, z):\n",
+        "  plt.figure(figsize=(8, 8))\n",
+        "  #plt.subplot(1, 2, 1)\n",
+        "  plt.plot(epochs_range, x, label=('Training' + z))\n",
+        "  plt.plot(epochs_range, y, label= ('Validation' + z))\n",
+        "  plt.legend(loc='lower right')\n",
+        "  plt.title('Training and Validation' + z)\n",
+        "  plt.show()\n",
+        "plot(acc, val_acc, 'Accuracy')\n",
+        "plot(loss, val_loss, 'Loss')"
       ],
       "execution_count": null,
       "outputs": [
@@ -336,82 +345,72 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vX-Pdp0eX0nD",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 72
-        },
-        "outputId": "ed5c5190-c0a2-428c-9c56-42c625deed20"
+        "id": "vX-Pdp0eX0nD"
       },
       "source": [
         "#save the model to our google drive\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
-        "path = path = F\"/content/drive/My Drive/skincancermlproject\" \n",
+        "path = path = F\"/content/drive/My Drive/skincancermlproject\" \n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q4AI6yv7Rm-h"
+      },
+      "source": [
         "model.save(path)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "INFO:tensorflow:Assets written to: /content/drive/My Drive/skincancermlproject/assets\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Py3txg6lYzM9",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "35b0915f-b30a-4792-a440-9290c17d355c"
+        "outputId": "4f04e638-2d41-4875-c841-6fb5ef991dc3"
       },
       "source": [
         "#import the model and evaluate its accuracy\n",
-        "new_model = tf.keras.models.load_model('/content/drive/My Drive/skincancermlproject/')\n",
-        "new_model.evaluate(val_data_gen)\n"
+        "import tensorflow as tf\n",
+        "new_model = tf.keras.models.load_model('/content/drive/My Drive/Image Classification/skincancermlproject/')"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "6/6 [==============================] - 1s 157ms/step - loss: 0.3109 - accuracy: 0.8742\n"
+            "WARNING:tensorflow:SavedModel saved prior to TF 2.5 detected when loading Keras model. Please ensure that you are saving the model with model.save() or tf.keras.models.save_model(), *NOT* tf.saved_model.save(). To confirm, there should be a file named \"keras_metadata.pb\" in the SavedModel directory.\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0.310916543006897, 0.8742424249649048]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 18
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "AEjjsnY2R0d-"
+      },
+      "source": [
+        "new_model.evaluate(val_data_gen)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "sHazUMSsc9Vw",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "48dd6293-56f1-474c-aca5-9c698440f58f"
+        "outputId": "7783edee-3913-4c09-e246-e6e430c36006"
       },
       "source": [
         "#make some predictions with the new model on our validation datasets. \n",
@@ -419,21 +418,26 @@
         "filename = os.path.join(validation_mal_dir, '1005.jpg')\n",
         "\n",
         "img = load_img(filename)\n",
-        "\n",
         "img = img.resize((IMG_WIDTH, IMG_HEIGHT), resample=PIL.Image.BICUBIC)\n",
         "arr = img_to_array(img)\n",
         "arr = np.expand_dims(arr, axis=0)\n",
         "arr /= 255\n",
-        "prediction = (new_model.predict(arr) > 0.5).astype(\"int32\")\n",
-        "pred = prediction[0]\n",
-        "print(('This skin mole is malignant' if pred >0 else 'This skin mole is benign'))"
+        "\n",
+        "prediction = new_model.predict(arr)\n",
+        "prediction = tf.constant(prediction)\n",
+        "predictions = (tf.keras.activations.sigmoid(prediction)).numpy()\n",
+        "\n",
+        "if predictions > 0.5:\n",
+        "  print('the model finds this skin mole to be MALIGNANT with ', (round(((predictions[0][0])*100),2)), '% strength')\n",
+        "else:\n",
+        "  print('the model finds this skin mole to be BENIGN with ', (round(100-((predictions[0][0])*100),2)), '% strength')"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "This skin mole is malignant\n"
+            "the model finds this skin mole to be MALIGNANT with  98.77 % strength\n"
           ],
           "name": "stdout"
         }
